fix: 🐛 overflow dropdown ui issue

--- a/ui/desktop/app/styles/app.scss
+++ b/ui/desktop/app/styles/app.scss
@@ -33,7 +33,6 @@
 
     main {
       flex-grow: 1;
-      overflow: auto;
     }
   }
 
